# rv-2018-lab-ncs

./: .gitignore  README.md  environment.sh
catkin_ws/src/placard_detection/: CMakeLists.txt  package.xml
catkin_ws/src/placard_detection/launch/: placard_detection.launch
catkin_ws/src/placard_detection/src/: mser_region_extraction.py  placard_prediction_ncs.py
catkin_ws/src/placard_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/placard_msgs/msg/: RegionProposalImage.msg
